Modernize the project: Gradle, Java 25, terrain-generator 0.2.0, bug fixes
Build and toolchain:
- Replace Maven (pom.xml, make_pkg.sh) with a Gradle build (wrapper at
  9.7.1, toolchain pinned to Java 25 with auto-provisioning).
  artemis-odb stays at 2.3.0 (its latest release), verified to build and
  run on JDK 25; jackson, logback and junit bumped to current versions,
  tests migrated to JUnit Jupiter.
- New CI workflow (build + test) and a tag-driven release workflow.

Terrain generation:
- Move to terrain-generator v0.2.0, the Rust rewrite: its zero-dependency
  Java FFM binding is vendored under com.github.fabioticconi.tergen
  (Apache-2.0, see THIRD-PARTY.md), calling the native library built by
  the nativeLib Gradle task. Rivers and lakes now come from real hydraulic
  erosion + hydrology, and are carved into the heightmap so the existing
  height-to-cell mapping keeps working, save files included.

itch.io preparation:
- gradle itchPackage produces a platform zip: jpackage app image with
  bundled JRE, game data, native library and .itch.toml manifest; the
  release workflow builds it for Linux, Windows and macOS.
- Data files are resolved through DataFiles (working directory or
  -Dalone.data), so the game runs from any install location.

Bug fixes:
- fish died in water: UnderwaterSystem compared a Cell against an
  EnumSet<TerrainType>, so the "in water" check never passed
- fleeing-from-danger creatures moved towards the danger (inverted side)
- GroupSystem used IntBag.removeIndex with an entity id (wrong element
  removed, or out-of-bounds crash)
- fish never spawned (nextGaussian() > 5f is a ~1-in-3.5M event)
- eating a carried corpse crashed on its null Position
- terrain-typed getFreeExits checked the centre cell, not the exit cell
- world preview was offset by one tile and sampled outside the map
- elevation save/load indexed with MAP_SIZE_X on both axes
- ring searches in SingleGrid bounds-checked only one axis
- makeItem/makeCreature/PathSystem/D